@@ -16,7 +16,7 @@ many-names: {0,number} names
 checkcommand-name: check
 checkcommand-description: Check the database for associated records.
 checkcommand-permission-description: Allow users to check the database for associated records.
-checkcommand-usage: [p:<player> | a:<address>]
+checkcommand-usage: p:<player> | a:<address>
 
 checkcommand-permission-player-description: Allow users to search by player name.
 checkcommand-permission-address-description: Allow users to search by IP address.
@@ -36,7 +36,8 @@ checkcommand-used: {0} checked an alias: {1}.
 deletecommand-name: delete
 deletecommand-description: Delete an alias
 deletecommand-permission-description: Allow users to delete aliases.
-deletecommand-usage: [player] [alias]
+deletecommand-usage: <player> <alias>
 
+deletecommand-no-arguments: You must specify two player names!
 deletecommand-log-success: {2} has removed the associated between {0} and {1}.
 deletecommand-success: &YELLOW{0} &GREENis no longer associated with &YELLOW{1}&GREEN.
