@@ -1,1 +1,5 @@
 debugging: true
+automatic-updates:
+  enabled: true
+  method: automatic
+  branch: stable
